--- a/index.html
+++ b/index.html
@@ -93,7 +93,22 @@
         .slot.drag-over { background: #e8f5e9; border: 2px dashed #4caf50; }
         .close-btn { position: absolute; top: 20px; right: 20px; background: #fff; color: #667eea; border: none; width: 30px; height: 30px; border-radius: 50%; cursor: pointer; font-size: 1.2em; transition: all 0.3s; }
         .close-btn:hover { background: #f0f0f0; transform: rotate(90deg); }
-        .remove-btn { color: #dc3545; cursor: pointer; font-weight: bold; padding: 2px 6px; border-radius: 4px; transition: all 0.3s; float: right; }
+        .remove-btn {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 28px;
+  height: 28px;
+  line-height: 1;
+  border: none;
+  background: rgba(220, 53, 69, 0.1);
+  border-radius: 6px;
+  font-weight: 700;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  touch-action: manipulation;
+}
+.remove-btn:active { transform: scale(0.96); }
         .remove-btn:hover { background: rgba(220, 53, 69, 0.1); }
         .delete-btn { color: #dc3545; cursor: pointer; padding: 2px 8px; background: rgba(220, 53, 69, 0.1); border-radius: 5px; transition: all 0.3s; }
         .delete-btn:hover { background: rgba(220, 53, 69, 0.2); }
@@ -493,13 +508,22 @@ subscribeToWeekPlanning(); // puis écoute temps réel cloud
             const div = document.createElement('div');
             div.className = `assignment task-${obj.category || 'autre'}`;
             div.draggable = true;
-            div.addEventListener('dragstart', (e) => { draggedElem = div; div.classList.add('dragging'); });
+            div.addEventListener('dragstart', (e) => {
+  // Si le point de départ est sur le bouton supprimer, on annule le drag
+  if (e.target && e.target.closest('.remove-btn')) {
+    e.preventDefault();
+    return;
+  }
+  draggedElem = div;
+  div.classList.add('dragging');
+});
             div.addEventListener('dragend', () => { draggedElem = null; div.classList.remove('dragging'); });
             div.innerHTML = `
-                <span class="assignment-person">${obj.person}</span>
-                <span class="remove-btn" title="Supprimer">×</span>
-                <div class="assignment-task">${obj.task}</div>
-            `;
+    <span class="assignment-person">${obj.person}</span>
+    <button class="remove-btn" type="button" title="Supprimer" aria-label="Supprimer" draggable="false">×</button>
+    <div class="assignment-task">${obj.task}</div>
+`;
+             div.style.paddingRight = '6px';
             div.querySelector('.remove-btn').addEventListener('click', () => { div.remove(); savePlanning(); });
             return div;
         }
@@ -705,6 +729,26 @@ subscribeToWeekPlanning(); // puis écoute temps réel cloud
         // Expose quelques fonctions globales nécessaires aux boutons inline
         window.togglePanel = togglePanel;
         window.changeWeek = changeWeek;
+        // Suppression par délégation (desktop + mobile)
+document.addEventListener('click', (e) => {
+  const btn = e.target.closest('.remove-btn');
+  if (!btn) return;
+  e.preventDefault();
+  e.stopPropagation();
+  const card = btn.closest('.assignment');
+  if (card) {
+    card.remove();
+    savePlanning(); // pousse la modif (local + Firestore temps réel)
+  }
+});
+
+// iOS Safari : assurer le déclenchement via touch (et bloquer le drag fantôme)
+document.addEventListener('touchstart', (e) => {
+  const btn = e.target.closest('.remove-btn');
+  if (!btn) return;
+  e.preventDefault(); // évite que le touch devienne un drag
+  btn.click();        // déclenche le handler ci-dessus
+}, { passive: false });
     </script>
 </body>
 </html>
